fix: updated details to wrap text at smaller widths (#913)

--- a/packages/styles/description-list.css
+++ b/packages/styles/description-list.css
@@ -85,6 +85,7 @@
   color: var(--data-list-value-text-color);
   background-color: var(--data-list-value-background-color);
   font-weight: var(--font-weight-normal);
+  word-break: break-word;
 }
 
 .DescriptionList__term,
